--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -53,7 +53,7 @@ sphinx = "*"
 tox = "*"
 yapf = "*"
 {% if cookiecutter.use_sphinx_material == 'y' %}
-sphinx-material = {git = "https://github.com/bashtage/sphinx-material.git"}{% endif %}
+sphinx-material = "*"{% endif %}
 {% if cookiecutter.use_nbsphinx == 'y' %}
 nbsphinx = "*"{% endif %}
 {% if cookiecutter.command_line_interface|lower == 'click' -%}
@@ -64,3 +64,8 @@ nbsphinx = "*"{% endif %}
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.dephell.main]
+versioning = "semver"
+from = {format = "poetrylock", path = "poetry.lock"}
+to = {format = "setuppy", path = "setup.py"}
