--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -23,8 +23,7 @@ classifiers=[
     '{{ license_classifiers[cookiecutter.open_source_license] }}',
 {%- endif %}
     'Natural Language :: English',
-    'Programming Language :: Python :: 3',
-    'Programming Language :: Python :: 3.5',
+
     'Programming Language :: Python :: 3.6',
     'Programming Language :: Python :: 3.7',
     'Programming Language :: Python :: 3.8',
@@ -62,10 +61,10 @@ nbsphinx = "*"{% endif %}
 {%- endif %}
 
 [build-system]
-requires = ["poetry>=0.12"]
+requires = ["poetry>=0.12", "setuptools"]
 build-backend = "poetry.masonry.api"
 
 [tool.dephell.main]
 versioning = "semver"
-from = {format = "poetrylock", path = "poetry.lock"}
+from = {format = "poetry", path = "pyproject.toml"}
 to = {format = "setuppy", path = "setup.py"}
